<?xml version="1.0"?>
<package format="2">
  <name>camera3_compressed_publisher_pkg</name>
  <version>0.0.1</version>
  <description>Publish camera_3 compressed images from a zip archive as sensor_msgs/CompressedImage.</description>

  <maintainer email="moon@example.com">moon</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
